# pratice-2

./: .gitignore  Convertlistitems.py  Handlingdivision.py  README.md  Simple cal.py  Swapping.py  addition  ahmed.py  atm withdraw.py  basicpy  empyoleedeatails.py  example.py  grademanagement.py  listofstudents  main.py  pyproject.toml  requirements.txt  simple login
myproject/: pyproject.toml
pro/: cnv.html  fg.css  fist.html  index.css  pas.html
