[project]
name = "pratice-2"
version = "0.1.0"
description = ""
authors = [
    {name = "ahamedpasha1410-sys",email = "ahamedpasha1410@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.34.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
