[project]
name = "myproject12"
version = "0.1.0"
description = ""
[tool.poetry]
name = "pratice-2"
version = "0.1.0"
package-mode = false
authors = [
    {name = "ahamedpasha1410-sys",email = "ahamedpasha1410@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
